<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


            <TextView
                android:id="@+id/signinto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/logintit"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signinto"

                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"

                >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:passwordToggleEnabled="true"


                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>




            <Button

                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_below="@id/text_input_layout4"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/buttonlogin"
                android:hint="@string/login"
                android:onClick="login"
                android:padding="20dp"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="18dp"
                android:id="@+id/login"


                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="40dp"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passtxt"
                android:id="@+id/passtxt"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/passtxt"
                android:text="@string/respass"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:onClick="resetpass"
                />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>