<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

        android:paddingBottom="50dp">


            <TextView
                android:id="@+id/signinto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/tit_insc"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:layout_marginTop="10dp"

                android:layout_centerHorizontal="true"
                android:textAlignment="center"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signinto"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"

                >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"

                >

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:id="@+id/wilaya_container"
               android:layout_below="@id/text_input_layout2"
android:background="@color/white"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               >
               <TextView
                   android:id="@+id/wilaya_lebel"
                   android:layout_width="100dp"
                   android:layout_height="match_parent"
                   android:layout_alignParentLeft="true"
                   android:layout_centerVertical="true"
                   android:gravity="center_vertical"
                   android:padding="10dp"
                   android:textSize="18dp"
                   android:textColor="@android:color/darker_gray"
                   android:text="@string/willaya"/>
               <Spinner
                   android:layout_toRightOf="@id/wilaya_lebel"
                   android:layout_centerVertical="true"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/wilaya"
                   android:textAlignment="center"

                   >

               </Spinner>
           </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wilaya_container"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:passwordToggleEnabled="true"


                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout4"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:passwordToggleEnabled="true"


                >

                <EditText
                    android:id="@+id/passwordconf"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/passwordconf"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

                    <Button
android:id="@+id/register"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:layout_below="@id/text_input_layout5"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonlogin"
                        android:hint="@string/inscrir"
                        android:onClick="signup"
                        android:padding="20dp"
                        android:textAlignment="center"
                        android:textColorHint="@color/white"
                        android:textSize="18dp"

                        android:layout_marginTop="30dp"

                        />
</RelativeLayout>
    </ScrollView>

</RelativeLayout>