<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorAccent"
        android:id="@+id/header"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Pizza Délice"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/store_title"
            />

    </RelativeLayout>
            <RelativeLayout
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:padding="10dp"
            android:id="@+id/body">
                <TextView
                android:id="@+id/tv"
                android:textSize="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_articl"/>
                <RelativeLayout
                android:layout_below="@id/tv"
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#66757373">
                    <TextView
                    android:id="@+id/tvphoto"
                    android:textSize="18dp"
                    android:paddingBottom="10dp"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/add_pictures"/>
                    <androidx.appcompat.widget.AppCompatButton
                    android:layout_below="@id/tvphoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_add_a_photo_black_24dp"
                    android:layout_centerInParent="true"
                    />
                </RelativeLayout>

                <TextView
                android:id="@+id/tv2"
                android:layout_below="@id/photoContainer"
                android:textSize="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/articl_name"/>
                <RelativeLayout
                android:id="@+id/article_name_container"
                android:layout_below="@id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="10dp">
                <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:id="@+id/article_name_input"
                android:layout_height="50dp"
                android:background="@android:color/white"/>
            </RelativeLayout>
            <TextView
            android:id="@+id/tv3"
            android:layout_below="@id/article_name_container"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_price"/>
            <RelativeLayout
            android:layout_below="@id/tv3"
            android:id="@+id/old_price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"

            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/old_price_input"
            android:background="@android:color/white"/>
            </RelativeLayout>
            <TextView
            android:id="@+id/tv4"
            android:layout_below="@id/old_price_container"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_price"/>
            <RelativeLayout
            android:layout_below="@id/tv4"
            android:id="@+id/new_price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"

            android:padding="10dp">
            <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/new_price_input"
            android:background="@android:color/white"/>
            </RelativeLayout>
            <Button
            android:id="@+id/add"
                android:layout_below="@id/new_price_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/buttonlogin"
            android:text="Ajouter"
                android:textStyle="bold"
            android:textColor="@android:color/white"

            />
            </RelativeLayout>
    </RelativeLayout>
</ScrollView>